# next-intl-extractor

./: .gitignore  Cargo.toml  README.md  output.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  lint.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/files/: bla.json  component.tsx  component2.tsx  source.json
crates/cli/src/: file_map.rs  files.rs  fs.rs  helpers.rs  lib.rs  main.rs  messages.rs  watch.rs
crates/cli_old/: Cargo.toml  README.md
crates/cli_old/files/: Header.labels.json  README.md
crates/cli_old/src/: file_map.rs  files.rs  helpers.rs  main.rs  watch.rs
crates/extractor/: Cargo.toml  README.md
crates/extractor/examples/: component.tsx
crates/extractor/src/: lib.rs  main.rs  visitor.rs
crates/resolver/: Cargo.toml  README.md
crates/resolver/src/: lib.rs  visitor.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: fs.rs  lib.rs
docs/: progress.md
examples/: component.tsx
examples/basic/: output.json  package.json  pnpm-lock.yaml
files/: Header.labels.json
npm/: binary.js  debug-wasm.js  postinstall.js
src/: file_map.rs  files.rs  main.rs  watch.rs
