[package]
name = "i18n-label-merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
display_json = "0.2.1"
lazy_static = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
thiserror = "1.0.58"
