[package]
name = "next-intl-extractor-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
next-intl-resolver = { path = "../resolver" }
anyhow = "1.0.86"
clap = { version = "4.5.10", features = ["derive"] }
glob = "0.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.120"
notify = { version = "7.0.0", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.10.1"
