[package]
name = "i18n-label-merger-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
display_json = "0.2.1"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
notify = "7.0.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
thiserror = "2.0.6"
walkdir = "2.5.0"
